# porkchop

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md
src/: benchmark.rs  clean.rs  clean.rs.bak  clean.rs.prebuild.bak  detect.rs  kit.rs  kits.rs  lib.rs  screen.rs  seqio.rs
src/data/: adapters.rs  barcodes.rs  cdna_legacy.rs  legacy.rs
