
[package]
rust-version = "1.82"
name = "porkchop"
version = "0.2.47"
edition = "2021"
license = "MPL-2.0"
description = "Authoritative ONT adapters/primers/barcodes + high-performance IO + benchmarking"
readme = "README.md"
repository = "https://github.com/sagrudd/porkchop"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1.10"
num_cpus = "1"
csv = "1"
sysinfo = "0.30"
polars = { version = "0.42", default-features = false, features = ["fmt","csv"] }
needletail = "0.5.1"
rust-htslib = { version = "0.46", default-features = false, features = ["bzip2","lzma","libdeflate"] }
aho-corasick = "1"
bio = "1"
edlib_rs = "0.1.2"
[profile.release]
lto = true
codegen-units = 1
opt-level = 3